<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/navProfilePic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_profile"
        android:layout_marginTop="20dp"
        app:round="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/navEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/example_email"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/navProfilePic"
        app:layout_constraintStart_toStartOf="@+id/navProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/navProfilePic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/navFreemium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/freemium"
        app:layout_constraintEnd_toEndOf="@+id/navEmail"
        app:layout_constraintStart_toStartOf="@+id/navEmail"
        app:layout_constraintTop_toBottomOf="@+id/navEmail"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
