<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.film_details.FilmDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/thumbView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/filmDetailsContainer"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/grey_shadow"
                app:layout_constraintBottom_toBottomOf="@+id/thumbView"
                app:layout_constraintTop_toTopOf="@+id/thumbView" />

            <LinearLayout
                android:id="@+id/filmDetailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/posterView"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:scaleType="centerCrop"
                    app:round="16dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="120dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.utils.widget.ImageFilterButton
                        android:id="@+id/addToLibrary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_shadow"
                        android:contentDescription="@string/add_to_library"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_add_library_24" />

                    <TextView
                        android:id="@+id/nameFilm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="3"
                        android:textColor="@color/light_purple_20"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nameEngFilm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="3"
                        android:textColor="@color/light_purple_40"
                        android:textSize="16sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/trailerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="50dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/button_gradient"
                android:text="@string/trailer" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/button_gradient"
                android:text="@string/play" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filmDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/bg_gradient" />

        <TextView
            android:id="@+id/filmDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:background="@drawable/bg_gradient"/>
    </LinearLayout>
</ScrollView>
